--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,5 @@
 <ion-view title="Dashboard">
   <ion-content class="padding">
-    <h1>Dash</h1>
+    <h4 ng-repeat="user in allusers">== {{user.id}}</h4>
   </ion-content>
 </ion-view>
