added basic user connections and disconnections

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -2,5 +2,6 @@
   <ion-content class="padding" style="background-color: #09435B;">
     <div id="myDetails"></div>
     <ul id="usersList"></ul>
+    <button onclick="disconnectUser()">DISCONNECT FROM USER</button>
   </ion-content>
 </ion-view>
