added basic commands template

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,5 +3,6 @@
     <div id="myDetails"></div>
     <ul id="usersList"></ul>
     <button onclick="disconnectUser()">DISCONNECT FROM USER</button>
+      <button onclick="startGame()">START GAME</button>
   </ion-content>
 </ion-view>
