added circles css

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,8 +1,20 @@
-body{
-    font-family: 'Montserrat', sans-serif;
+body, button{
+    /*font-family:ospFont;*/
+    font-family: 'Fjalla One', sans-serif;
 }
+
+/*@font-face {*/
+    /*font-family: ospFont;*/
+    /*src: url(OSP-DIN.ttf);*/
+/*}*/
+/*@font-face {*/
+    /*font-family: lightFont;*/
+    /*src: url(Montserrat-Regular.ttf);*/
+/*}*/
+
+
 #myDetails{
-    color: #82D1DE;
+    color: #3AC6A9;
     font-size: 2.4em;
     padding: 20px;
 }
@@ -14,4 +26,157 @@ body{
     width: 100% ;
     margin-bottom: 5px;
     font-size: 1.4em;
+}
+
+/*GAME BOARD*/
+#gameBoard{
+    width: 100%;
+    text-align: center;
+}
+/*.gameBox{*/
+
+/*}*/
+/*table {*/
+    /*width:100%;*/
+/*}*/
+td {
+    width:20%;
+    position:relative;
+}
+td .dummy{
+    margin-top:100%;
+}
+td .content {
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
+.contentInside0{
+    border-radius: 50%;
+    width: 60%;
+    height: 60%;
+    margin:20%;
+    background: #38526b;
+    overflow: hidden;
+}
+.contentInside1{
+    border-radius: 50%;
+    width: 60%;
+    height: 60%;
+    margin:20%;
+    background: #4d9790;
+    overflow: hidden;
+}
+.contentInside2{
+    border-radius: 50%;
+    width: 60%;
+    height: 60%;
+    margin:20%;
+    background:#3ac6a9;
+    overflow: hidden;
+}
+.contentInside3{
+    border-radius: 50%;
+    width: 60%;
+    height: 60%;
+    margin:20%;
+    background:#3ac6a9;
+    overflow: hidden;
+}
+.insidecircle{
+    border-radius: 105%;
+    width: 40%;
+    height: 40%;
+    left: 30%;
+    top: 30%;
+    position: absolute;
+    background:#2D3E50;
+}
+.split2circle{
+    width: 4%;
+    height: 100%;
+    left: 48%;
+    top: 0;
+    position: absolute;
+    background:#2D3E50;
+}
+.split3circle{
+    width: 4%;
+    height: 100%;
+    left: 48%;
+    top: 0;
+    position: absolute;
+    background:#2D3E50;
+}
+.split3circle1{
+    width: 4%;
+    height: 50%;
+    left: 48%;
+    top: 0;
+    position: absolute;
+    background:#2D3E50;
+}
+.split3circle2{
+    width: 4%;
+    height: 50%;
+    left: 75%;
+    top: 40%;
+    position: absolute;
+    background:#2D3E50;
+    -webkit-transform: rotate(120deg);
+}
+.split3circle3{
+    width: 4%;
+    height: 50%;
+    right: 75%;
+    top: 40%;
+    position: absolute;
+    background:#2D3E50;
+    -webkit-transform: rotate(-120deg);
+}
+.semicircle{
+    width: 48%;
+    height: 100%;
+    left: 0%;
+    top: 0%;
+    background: #1daa94;
+    position: relative;
+}
+.semicircle1{
+    width: 50%;
+    height: 100%;
+    left: 13%;
+    top: 22%;
+    background: #1daa94;
+    position: relative;
+    -webkit-transform: rotate(120deg);
+}
+.semicircle2{
+    width: 50%;
+    height: 100%;
+    right: -12%;
+    top: -126%;
+    position: relative;
+    background: #4d9790;
+    -webkit-transform: rotate(-120deg);
+}
+.semicircle3{
+    width: 50%;
+    height: 50%;
+    right: -50%;
+    top: -205%;
+    position: relative;
+    background: #23c2a8;
+}
+@-webkit-keyframes rotating {
+    from{-webkit-transform: rotate(0deg);}
+    to{-webkit-transform: rotate(360deg);   }
+}
+.rotating {
+    /*-webkit-animation: rotating 2s linear infinite;*/
+}
+.slider{
+    height:100%;
 }
