fixed slide swipe issue

--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,6 +1,6 @@
 <ion-view title="Users Online">
   <ion-content class="" style="background-color: #2D3E50;" scroll="false">
-      <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false">
+      <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" ng-init="init()">
           <ion-slide style="background-color: #2D3E50; height:100%" class="padding">
             <div id="myDetails"></div>
             <ul id="usersList"></ul>
