--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,17 +1,18 @@
 <ion-view title="Users Online">
-  <ion-content class="" style="background-color: #2D3E50;" scroll="false">
-      <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" ng-init="init()">
-          <ion-slide style="background-color: #2D3E50; height:100%" class="padding">
-            <div id="myDetails"></div>
-            <ul id="usersList"></ul>
-            <button class="button button-block button-positive" onclick="disconnectUser()">DISCONNECT FROM USER</button>
-            <button class="button button-block button-positive" ng-click="nextSlide()">START GAME</button>
-          </ion-slide>
-          <ion-slide>
-              <table id="gameBoard"></table>
-              <button class="button button-block button-positive" ng-click="prevSlide()">END GAME</button>
-          </ion-slide>
-
-      </ion-slide-box>
-  </ion-content>
+    <ion-content class="" style="background-color: #2D3E50;" scroll="false">
+        <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" ng-init="init()">
+            <ion-slide style="background-color: #2D3E50; height:100%" class="padding">
+                <div id="myDetails"></div>
+                <ul id="usersList"></ul>
+                <button class="button button-block button-positive" onclick="disconnectUser()">DISCONNECT FROM USER</button>
+                <button class="button button-block button-positive" ng-click="requestStart()">START GAME</button>
+                <button id="nextSlideButton" class="button" style="display: none" ng-click="nextSlide()">DUMMY</button>
+            </ion-slide>
+            <ion-slide>
+                <table id="gameBoard"></table>
+                <button class="button button-block button-positive" ng-click="requestEnd()">END GAME</button>
+                <button id="prevSlideButton" class="button" style="display: none" ng-click="prevSlide()">DUMMY</button>
+            </ion-slide>
+        </ion-slide-box>
+    </ion-content>
 </ion-view>
