--- a/www/css/style.css
+++ b/www/css/style.css
@@ -185,7 +185,13 @@ td .content {
     height:100%;
 }
 /*===============BLAST OBJECTS========= */
-
+@-webkit-keyframes blast-left {
+    from{left: 0%;}
+    to{left: -100%; }
+}
+.blast-left-activate{
+    -webkit-animation: rotating 6s linear ;
+}
 
 
 
@@ -198,5 +204,21 @@ td .content {
     background: #4d9790;
     position:absolute;
     z-index: 2;
+    left: 0%;
+    top: 0%;
     /*opacity:0.5;*/
+    /*-webkit-transition:left 0.5s, top 0.5s;*/
+    /*transition:left 0.5s, top 0.5s;*/
+}
+.blast.active.left{
+    left:-100%;
+}
+.blast.active.right{
+    left: 100%;
+}
+.blast.active.top{
+    top:-100%;
+}
+.blast.active.bottom{
+    top:100%;
 }
